# cos-customizer

./: BUILD.bazel  WORKSPACE  main.go
cmd/: BUILD.bazel  disable_auto_update.go  finish_image_build.go  finish_image_build_test.go  install_gpu.go  seal_oem.go  set_oem.go  start_image_build.go
config/: config.go
data/: build_image.wf.json  resize-oem.service  resize-oem.sh  startup.sh
data/builtin_build_context/: Dockerfile  disable_auto_update.sh  disable_oem_mount.sh  docker_build_veritysetup.sh  seal_oem.sh
preloader/: preload.go
testing/: deprecate_test.yaml  disable_auto_update_test.yaml  disable_systemd_service_test.yaml  env_test.yaml  extend_oem_test.yaml  extend_oem_test_10.yaml  gpu_test.yaml  gpu_test_deps_dir.yaml  image_test.yaml  milestone_test.yaml  multi_script_test.yaml  parallel_test.yaml  seal_oem_test.yaml  seal_oem_test_1.yaml  seal_oem_test_10.yaml  seal_oem_test_100.yaml  seal_oem_test_1024.yaml  seal_oem_test_2.yaml  seal_oem_test_5.yaml  seal_oem_test_no_oem_size.yaml  seal_oem_test_no_size.yaml  seal_oem_test_timeout.yaml  smoke_test.yaml  timeout_test.yaml  toolbox_test.yaml
testing/disable_auto_update_test/: preload_test.cfg
testing/disable_systemd_service_test/: preload.sh  preload_test.cfg
testing/extend_oem_test/: extend_oem_test.yaml  preload.sh  preload_test.cfg
testing/gpu_test/: gpu_test.yaml
tools/: BUILD.bazel  disable_auto_update.go  disable_systemd_service.go  extend_oem_partition.go  handle_disk_layout.go  handle_disk_layout_test.go  seal_oem_partition.go
tools/cmd/extend_oem/: BUILD.bazel  extend_oem_bin.go
(+24 files in other folders)
